--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
 <html>
     <body>
         <h1>hello
-            
+
         </h1>
+        <h2>hello this is about website</h2>
+
     </body>
 </html>
