--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>welcome</title></head>
     <body>
-        hello everyone
-    </body>
+        <h1>welcome to my new website</h1>
+     </body>
 </html>
